--- a/webhooks-extension/Gopkg.toml
+++ b/webhooks-extension/Gopkg.toml
@@ -1,28 +1,10 @@
-# Gopkg.toml example
-#
 # Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
 # for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#   name = "github.com/x/y"
-#   version = "2.4.0"
-#
-# [prune]
-#   non-go = false
-#   go-tests = true
-#   unused-packages = true
+
+[[constraint]]
+  name = "github.com/tektoncd/pipeline"
+  # HEAD as of 2019-10-16
+  revision = "8871979dfc08fb65ae544c6ad2de83f8bab617b0"
 
 [[override]]
   name = "k8s.io/api"
