add timeout message to monitor task

--- a/webhooks-extension/config/task-monitor-result.yaml
+++ b/webhooks-extension/config/task-monitor-result.yaml
@@ -22,6 +22,10 @@ spec:
         description: The text of the failure comment
         default: "Failed"
         type: string
+      - name: commenttimeout
+        description: The text of the timeout comment
+        default: "Unknown"
+        type: string
       - name: dashboard-url
         description: The URL to the pipelineruns page of the dashboard
         default: "http://localhost:9097/"
@@ -47,6 +51,8 @@ spec:
         value: $(inputs.params.commentsuccess)
       - name: COMMENT_FAILURE
         value: $(inputs.params.commentfailure)
+      - name: COMMENT_TIMEOUT
+        value: $(inputs.params.commenttimeout)
       - name: URL
         value: $(inputs.params.dashboard-url)
       # This can be deleted after any fix to the above mentioned pending status change
@@ -131,7 +137,7 @@ spec:
           pipeline = pipeline.strip()
           print("Still Running - pipelinerun " + pr + " in namespace " + namespace)
           link = pipelineRunURLPrefix + "/#/namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
-          runsIncomplete.append("[**??????**](" + link + ") | " + pipeline + " | " + pr + " | " + namespace)
+          runsIncomplete.append("[**$COMMENT_TIMEOUT**](" + link + ") | " + pipeline + " | " + pr + " | " + namespace)
       results = runsPassed + runsFailed + runsIncomplete
       comment = ("## Tekton Status Report \n\n"
                  "Status | Pipeline | PipelineRun | Namespace\n"
