--- a/webhooks-extension/config/triggers_prototype/task-monitor-result.yaml
+++ b/webhooks-extension/config/triggers_prototype/task-monitor-result.yaml
@@ -22,6 +22,10 @@ spec:
         description: The URL to the pipelineruns page of the dashboard
         default: "http://localhost:9097/"
         type: string
+      - name: commenttimeout
+        description: The text of the timeout comment
+        default: "Unknown"
+        type: string
       # This can be deleted after pending status change issue is resolved, that being that AFAIK the pull request resource only modifies
       # status once everything is complete, so we can only modify status via the pull request resource once.  To get around this we hit
       # the github status URL to set the status into pending and use this secret to during that request.  
@@ -45,6 +49,8 @@ spec:
         value: $(inputs.params.commentsuccess)
       - name: COMMENT_FAILURE
         value: $(inputs.params.commentfailure)
+      - name: COMMENT_TIMEOUT
+        value: $(inputs.params.commenttimeout)
       - name: URL
         value: $(inputs.params.dashboard-url)
       # This can be deleted after any fix to the above mentioned pending status change
@@ -116,7 +122,7 @@ spec:
                 runsFailed.append("[**$COMMENT_FAILURE**](" + link + ") | " + pipeline + " | " + pr + " | " + namespace)
                 continue
               link = pipelineRunURLPrefix + "/#/namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
-              runsIncomplete.append("[**??????**](" + link + ") | " + pipeline + " | " + pr + " | " + namespace)
+              runsIncomplete.append("[**$COMMENT_TIMEOUT**](" + link + ") | " + pipeline + " | " + pr + " | " + namespace)
             if len(runsIncomplete) == 0:
               break
           else:
