Fix task monitor by adding copy step

--- a/webhooks-extension/config/task-monitor-result.yaml
+++ b/webhooks-extension/config/task-monitor-result.yaml
@@ -150,3 +150,10 @@ spec:
       handle.write(status)
       handle.close()
       EOF
+  - name: copy
+    image: busybox
+    command: ["cp"]
+    args:
+    - -r
+    - /workspace/pull-request
+    - /workspace/output
