--- a/webhooks-extension/config/interceptor-deployment.yaml
+++ b/webhooks-extension/config/interceptor-deployment.yaml
@@ -15,9 +15,10 @@ spec:
     spec:
       containers:
         - name: validate
-          image: adamroberts/github-validate-task:latest
+          image: "github.com/tektoncd/experimental/webhooks-extension/cmd/interceptor"
           env:
             - name: INSTALLED_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+      serviceAccountName: tekton-webhooks-extension
