--- a/webhooks-extension/config/latest/openshift-tekton-webhooks-extension.yaml
+++ b/webhooks-extension/config/latest/openshift-tekton-webhooks-extension.yaml
@@ -324,7 +324,7 @@ spec:
     - |
       set -e
       cat <<EOF | python
-      import time, os, json, requests, pprint
+      import time, os, json, requests, pprint, shutil
       from kubernetes import client, config
       config.load_incluster_config()
       api_instance = client.CustomObjectsApi(client.ApiClient(client.Configuration()))
@@ -399,6 +399,10 @@ spec:
                  "Status | Pipeline | PipelineRun | Namespace\n"
                  ":----- | :------- | :--------------- | :--------\n"
                  ) + "\n".join(results)
+      if not os.path.exists("/workspace/output/pull-request/labels"):
+        os.makedirs("/workspace/output/pull-request/labels")
+      if not os.path.exists("/workspace/output/pull-request/comments"):
+        os.makedirs("/workspace/output/pull-request/comments")
       handle = open("/workspace/pull-request/comments/newcomment.json", 'w')
       handle.write(comment)
       handle.close()
@@ -407,10 +411,19 @@ spec:
       else:
         detailsURL = "$URL" + "/#/pipelineruns"
       print("Set details url to: " + detailsURL)
-      status = json.dumps(dict(code=gitPRcode, description=gitPRdescription, id=gitPRcontext, url=detailsURL))
-      handle = open("/workspace/pull-request/status/newstatus.json", 'w')
+      status = json.dumps(dict(ID=gitPRcontext,Code=gitPRcode,Description=gitPRdescription,URL=detailsURL))
+      if not os.path.exists("/workspace/output/pull-request/status"):
+        os.makedirs("/workspace/output/pull-request/status")
+      handle = open("/workspace/output/pull-request/status/Tekton.json", 'w')
       handle.write(status)
       handle.close()
+      shutil.copyfile("/workspace/pull-request/base.json","/workspace/output/pull-request/base.json")
+      shutil.copyfile("/workspace/pull-request/head.json","/workspace/output/pull-request/head.json")
       EOF
-
-
+  - name: copy
+    image: busybox
+    command: ["cp"]
+    args:
+    - -r
+    - /workspace/pull-request
+    - /workspace/output
