--- a/webhooks-extension/config/latest/gcr-tekton-webhooks-extension.yaml
+++ b/webhooks-extension/config/latest/gcr-tekton-webhooks-extension.yaml
@@ -411,6 +411,7 @@ spec:
       generateName: monitor-taskrun-
       namespace: tekton-pipelines
     spec:
+      serviceAccountName: tekton-webhooks-extension
       taskRef:
         name: monitor-task
       inputs:
