--- a/webhooks-extension/config/openshift/openshift-tekton-webhooks-extension-release.yaml
+++ b/webhooks-extension/config/openshift/openshift-tekton-webhooks-extension-release.yaml
@@ -523,7 +523,7 @@ spec:
       generateName: monitor-taskrun-
       namespace: tekton-pipelines
     spec:
-      serviceAccount: tekton-webhooks-extension
+      serviceAccountName: tekton-webhooks-extension
       taskRef:
         name: monitor-task
       inputs:
