--- a/webhooks-extension/base/400-monitor-triggerbinding.yaml
+++ b/webhooks-extension/base/400-monitor-triggerbinding.yaml
@@ -7,3 +7,5 @@ spec:
   params:
   - name: pullrequesturl
     value: $(body.pull_request.html_url)
+  - name: statusesurl
+    value: $(body.pull_request.statuses_url)
