Updates webhooks extension eventlistener to be compatible with triggers 0.2.1.

--- a/webhooks-extension/Gopkg.toml
+++ b/webhooks-extension/Gopkg.toml
@@ -25,20 +25,32 @@
 #   unused-packages = true
 
 [[override]]
+  name = "github.com/tektoncd/triggers"
+  version = "v0.2.1"
+
+[[override]]
   name = "k8s.io/api"
-  version = "kubernetes-1.12.9"
+  version = "kubernetes-1.13.4"
 
 [[override]]
   name = "k8s.io/apimachinery"
-  version = "kubernetes-1.12.9"
+  version = "kubernetes-1.13.4"
 
 [[override]]
   name = "k8s.io/client-go"
-  version = "kubernetes-1.12.9"
+  version = "kubernetes-1.13.4"
 
 [[override]]
-  name = "github.com/tektoncd/triggers"
-  branch = "master"
+  name = "github.com/openshift/client-go"
+  branch = "release-4.2"
+
+[[override]]
+  name = "github.com/openshift/api"
+  branch = "release-4.2"
+
+[[override]]
+  name = "github.com/tektoncd/pipeline"
+  version = "v0.10.1"
 
 [prune]
   go-tests = true
