--- a/webhooks-extension/Gopkg.toml
+++ b/webhooks-extension/Gopkg.toml
@@ -25,6 +25,10 @@
 #   unused-packages = true
 
 [[override]]
+  name = "github.com/tektoncd/triggers"
+  version = "v0.2.1"
+
+[[override]]
   name = "k8s.io/api"
   version = "kubernetes-1.13.4"
 
@@ -37,8 +41,16 @@
   version = "kubernetes-1.13.4"
 
 [[override]]
-  name = "github.com/tektoncd/triggers"
-  version = "0.2.1"
+  name = "github.com/openshift/client-go"
+  branch = "release-4.2"
+
+[[override]]
+  name = "github.com/openshift/api"
+  branch = "release-4.2"
+
+[[override]]
+  name = "github.com/tektoncd/pipeline"
+  version = "v0.10.1"
 
 [prune]
   go-tests = true
