430: Split GIT_ AND WEBHOOK_SSL_VERIFICATION_ENABLED

--- a/webhooks-extension/base/300-extension-deployment.yaml
+++ b/webhooks-extension/base/300-extension-deployment.yaml
@@ -41,11 +41,22 @@ spec:
             value: DOCKER_REPO
           - name: WEB_RESOURCES_DIR
             value: web
+
+          # Set GIT_SSL_VERIFICATION_ENABLED to "false" if your Git server has a self-signed HTTPS certificate. 
+          # Caution! Doing this leaves you potentially vulnerable to systems impersonating your Git server 
+          - name: GIT_SSL_VERIFICATION_ENABLED
+            value: "true"
+
+          # WEBHOOK_CALLBACK_URL is the value of the endpoint that Git will deliver webhooks to. 
+          # Exposed via a Route or Ingress; needs to be set at install time. 
           - name: WEBHOOK_CALLBACK_URL
             value: "http://listener.IPADDRESS.nip.io"
-          # If the WEBHOOK_CALLBACK_URL's protocol is https, should ssl verification be enabled/disabled
-          - name: SSL_VERIFICATION_ENABLED
+
+          # Set WEBHOOK_SSL_VERIFICATION_ENABLED to "true" if the Route or Ingress in front of WEBHOOK_CALLBACK_URL is protected
+          # by an HTTPS endpoint signed by a certificate that your Git server accepts. 
+          - name: WEBHOOK_SSL_VERIFICATION_ENABLED
             value: "false"
+
           - name: SERVICE_ACCOUNT
             valueFrom:
               fieldRef:
