Tekton Triggers 0.4 support, webhook name must be unique

--- a/webhooks-extension/base/200-clusterrole-eventListener.yaml
+++ b/webhooks-extension/base/200-clusterrole-eventListener.yaml
@@ -8,9 +8,14 @@ rules:
   resources:
   - tasks
   - taskruns
-  - eventlisteners
+  verbs:
+  - get
+- apiGroups:
+  - triggers.tekton.dev
+  resources:
   - triggerbindings
   - triggertemplates
+  - eventlisteners
   verbs:
   - get
 - apiGroups:
