--- a/webhooks-extension/Gopkg.toml
+++ b/webhooks-extension/Gopkg.toml
@@ -1,61 +1,35 @@
-# Gopkg.toml example
-#
-# Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
-# for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#   name = "github.com/x/y"
-#   version = "2.4.0"
-#
-# [prune]
-#   non-go = false
-#   go-tests = true
-#   unused-packages = true
-
 [[override]]
   name = "github.com/tektoncd/triggers"
-  version = "v0.2.1"
+  version = "v0.4.0-rc1"
+
+[[override]]
+  name = "knative.dev/pkg"
+  branch = "release-0.12"
 
 [[override]]
   name = "k8s.io/api"
-  version = "kubernetes-1.13.4"
+  version = "v0.16.5"
 
 [[override]]
   name = "k8s.io/apimachinery"
-  version = "kubernetes-1.13.4"
+  version = "v0.16.5"
 
 [[override]]
   name = "k8s.io/client-go"
-  version = "kubernetes-1.13.4"
+  version = "v0.16.5"
 
 [[override]]
   name = "github.com/openshift/client-go"
-  branch = "release-4.2"
+  branch = "release-4.3"
 
 [[override]]
   name = "github.com/openshift/api"
-  branch = "release-4.2"
+  branch = "release-4.3"
 
 [[override]]
   name = "github.com/tektoncd/pipeline"
-  version = "v0.10.1"
+  version = "v0.11.0"
 
 [prune]
   go-tests = true
   unused-packages = true
-
-
-
-
