--- a/helm/dashboard/templates/customresourcedefinitions.yaml
+++ b/helm/dashboard/templates/customresourcedefinitions.yaml
@@ -4,7 +4,7 @@
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#     https://www.apache.org/licenses/LICENSE-2.0
+#     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -12,16 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: pipeline
-apiVersion: v1
-version: 0.0.1
-appVersion: 0.11.0
-home: https://github.com/tektoncd/pipeline
-keywords:
-  - helm
-  - tekton pipeline
-maintainers:
-  - name: eddycharly
-    email: ceb@agriconomie.com
-description: |
-  This chart bootstraps installation of [tekton pipeline](https://github.com/tektoncd/pipeline).
+{{- if .Values.customResourceDefinitions.create }}
+{{- range $path, $bytes := .Files.Glob "crds/*.yaml" }}
+{{ $.Files.Get $path }}
+---
+{{- end }}
+{{- end }}
