--- a/helm/dashboard/Chart.yaml
+++ b/helm/dashboard/Chart.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: dashboards
+name: dashboard
 apiVersion: v1
 version: 0.0.1
 appVersion: 0.6.0
