--- a/helm/dashboard/templates/dashboard_deployment.yaml
+++ b/helm/dashboard/templates/dashboard_deployment.yaml
@@ -33,7 +33,7 @@ spec:
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
-      {{- with .Values.controller.annotations }}
+      {{- with .Values.dashboard.annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
