--- a/webhooks-extension/tekton/resources.yaml
+++ b/webhooks-extension/tekton/resources.yaml
@@ -8,7 +8,7 @@ spec:
   - name: url
     value: https://github.com/tektoncd/experimental 
   - name: revision
-    value: INSERT_COMMIT_ID_TO_PUBLISH_HERE
+    value: INSERT_TAG_HERE
 ---
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineResource
