--- a/helm/dashboard/Chart.yaml
+++ b/helm/dashboard/Chart.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 name: dashboard
+icon: https://tekton.dev/images/tekton-horizontal-color.png
 apiVersion: v1
 version: 0.0.1
 appVersion: 0.6.0
