--- a/helm/triggers/Chart.yaml
+++ b/helm/triggers/Chart.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 name: triggers
+icon: https://tekton.dev/images/tekton-horizontal-color.png
 apiVersion: v1
 version: 0.4.0
 appVersion: 0.4.0
